Minor wording changes for clarity

--- a/vignettes/promises_04_mirai.Rmd
+++ b/vignettes/promises_04_mirai.Rmd
@@ -100,13 +100,13 @@ m <- mirai(
 ```
 This passes the calling environment, which includes both the `download_data` function as well as `url`.
 
-Care should be taken when using this feature as it will also pass anything else that happens to be in the same environment. It is usually safer to use when mirai is called inside of another function, then `environment()` will only consist of variables passed as arguments to that function, or created locally within it.
+Care should be taken when using this feature as it will also pass anything else that happens to be in the same environment. It is safer to use when mirai is called inside of another function, then `environment()` will only consist of variables passed as arguments to that function, or created locally within it.
 
 ### Package loading
 
 Besides variables, package functions need to be declared with the full namespace so that they can be found in the other process. For example, using `dplyr::mutate()` instead of just `mutate()`, even if the `dplyr` package is loaded in your main session, as the other process will not have any packages loaded by default.
 
-Alternatively, make a call to load the package inside your mirai code, for example by adding `library(dplyr)` at the top of your code. Note that for infix operators such as the magrittr pipe `%>%`, this may be the most convenient option. Use of the pipe requires that the package be loaded beforehand using `library(magrittr)`.
+Alternatively, make a call to load the package inside your mirai code chunk, for example by adding `library(dplyr)`. Sometimes this may be the most convenient option, especially for for infix operators. For example the magrittr pipe `%>%`, requires a `library(magrittr)` to load the package beforehand.
 
 ### Custom Data Types
 
